--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Wcdaren
+title: Hexo
 subtitle:
 description:
 keywords:
-author: 忘尘
+author: John Doe
 language:
 timezone:
 
